fixed problem with missing post in old posts, add nav back to new at top of old posts, align nav actions right

--- a/src/documents/css/site.css.styl
+++ b/src/documents/css/site.css.styl
@@ -337,6 +337,8 @@ a.button
     border-radius()
     background-color: linkColor
     color: backgroundColor
+  .nav
+    text-align: right
 
 #post
   .date
